<resources>
    <string name="app_name">TMap</string>
    <string name="offlineMapName">Offline Maps</string>
    <string name="noArchivesFound">No map archives found!</string>
    <string name="cannotOpenFile">Cannot open document!</string>
    <string name="follow">Follow</string>
    <string name="openFile">Open document</string>
    <string name="selectLayer">Select map</string>
    <string name="activitySettings">Settings</string>
    <string name="keepScreenOn">Keep screen on</string>
    <string name="keepScreenOnSummary"></string>
    <string name="orientation">Orientation</string>
    <string name="orientationNone">Unlocked</string>
    <string name="orientationPortrait">Portrait</string>
    <string name="orientationLandscape">Landscape</string>
    <string name="fullscreen">Show fullscreen</string>
    <string name="trackColor">Track color</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="activityDocuments">Open documents</string>
    <string name="showOpenFiles">Show open documents</string>
    <string name="closeDocument">Close document?</string>
    <string name="brightness">Screen brightness</string>
    <string name="systemBrightness">Use system brightness</string>
    <string name="trackOpacity">Track opacity</string>
    <string name="trackWidth">Track width</string>
    <string name="showMaps">Show layers</string>
    <string name="activityMaps">Map layers</string>
    <string name="mapShow">Show</string>
    <string name="mapHide">Hide</string>
    <string name="mapShareStart">Start sharing</string>
    <string name="mapShareEnd">Stop sharing</string>
    <string name="mapDownload">Download maps</string>
    <string name="errorNotImplemented">This feature is not yet implemented!</string>
    <string name="mapSecondaryText">%1$s • %2$s • %3$dMB</string>
    <string name="mapShared">Shared</string>
    <string name="mapNotShared">Not shared</string>
    <string name="cannotZoomToMap">The map does not contain location information!</string>
</resources>
